--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "5.7.0",
-        "bootstrap": "4.2.1",
-        "jquery": "3.4.0",
-        "jquery.easing": "^1.4.1"
+        "@fortawesome/fontawesome-free": "5.11.2",
+        "bootstrap": "4.3.1",
+        "jquery": "3.4.1",
+        "jquery.easing": "^1.4.1",
+        "node-sass": "^4.12.0"
     },
     "devDependencies": {
         "browser-sync": "2.26.3",
